feat: atualiza configuração do ambiente para usar Java 21; altera portas de API e remove arquivos desnecessários; renomeia endpoints para simplificação